--- a/extractor/.vscode/settings.json
+++ b/extractor/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-    "deno.enable": false
+    "deno.enable": false,
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "node_modules":true
+    }
 }
