--- a/extractor/package.json
+++ b/extractor/package.json
@@ -30,6 +30,7 @@
     "cheerio": "^1.0.0-rc.3",
     "class-validator": "^0.12.2",
     "fp-ts": "^2.6.2",
+    "ramda": "^0.27.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
@@ -43,12 +44,14 @@
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
     "@types/node": "^13.9.1",
+    "@types/ramda": "github:types/npm-ramda#dist",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-ramda": "^2.5.1",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
