--- a/extractor/tsconfig.json
+++ b/extractor/tsconfig.json
@@ -9,7 +9,18 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true
+    "incremental": true,
+    "paths": {
+      "@app/basic-helper": [
+        "libs/basic-helper/src"
+      ],
+      "@app/basic-helper/*": [
+        "libs/basic-helper/src/*"
+      ]
+    }
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
