--- a/extractor/.vscode/settings.json
+++ b/extractor/.vscode/settings.json
@@ -7,5 +7,12 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "node_modules":true
-    }
+    },
+    "search.exclude": {
+        "**/node_modules": true,
+        "**/bower_components": true,
+        "**/*.code-search": true,
+        "**/mock":true,
+    },
+    "typescript.referencesCodeLens.showOnAllFunctions": true
 }
